--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1.4rem 7%;
-    background-color: rgb(0, 0, 0, 0.05);
+    padding: 0.3rem 7%;
+    background-color: rgba(0, 0, 0, 0.05);
     border-bottom: 1px solid #107da3;
     position: fixed;
     top: 0;
@@ -35,8 +35,46 @@ body {
     z-index: 9999;
 }
 
-.navbar .navbar-logo{
-    width: 10rem;
-    height: 15rem;
+.navbar .navbar-logo img{
+    width: 100%;
+    height: 75px;
 
+}
+
+.navbar .navbar-nav a {
+    font-weight: bold;
+    font-size: 1rem;
+    color: #000;
+    display: inline-block;
+    margin: 0 1.4rem;
+}
+
+.navbar .navbar-nav a:hover {
+    color: var(--primary);
+}
+
+.navbar .navbar-nav a::after {
+    content: "";
+    display: block;
+    padding-bottom: 0.2rem;
+    border-bottom: 0.1rem solid var(--primary);
+    transform: scaleX(0);
+    transition: 0.3s linear;
+}
+
+.navbar .navbar-nav a:hover::after {
+    transform: scaleX(0.5);
+}
+
+.navbar .nabar-ex a {
+    color: #000;
+    margin: 0 0.5rem;
+}
+
+.navbar .nabar-ex a:hover {
+    color: var(--primary);
+}
+
+#hamburger-menu {
+    display: none;
 }
