--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     font-family: 'Libre Baskerville', serif;
     background-color: var(--bg);
     color: black;
-
+    min-height: 2100px;
 }
 
 /*Navbar*/
@@ -85,8 +85,23 @@ body {
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background-image: url('Asset/');
+    background-image: url('Asset/background.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
 }
+
+.hero::after{
+    content: '';
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(0deg,
+    rgba(0, 0, 0,) 3% rgba(255, 255, 255, 0)25%);
+}
+
 /*Responsive*/
 
 @media (max-width: 1366px) {
