--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     font-family: 'Libre Baskerville', serif;
     background-color: var(--bg);
     color: black;
-    min-height: 2100px;
+    min-height: 1000px;
 }
 
 /*Navbar*/
@@ -85,7 +85,7 @@ body {
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background-image: url('Asset/background.jpg');
+    background-image: url('Asset/bg.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -98,8 +98,38 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: linear-gradient(0deg,
-    rgba(0, 0, 0,) 3% rgba(255, 255, 255, 0)25%);
+    background: linear-gradient(0deg, 
+    rgba(243, 243, 243,0.2)3%, rgba(243, 243, 243, 0.05) 20%);
+}
+
+.hero .content {
+    padding: 0.5rem 0.5rem 1.4rem 7%;
+    max-width: 60rem;
+
+}
+
+.hero .content h1 {
+    font-size: 4em;
+    color: #fff;
+    text-shadow: 1px 1px 3px rgba(243, 243, 243, 0.05);
+}
+
+.hero .content p {
+    font-size: 1.6rem;
+    margin-top: 1rem;
+    line-height: 1.2;
+    font-weight: 100;
+    text-shadow: 1px 1px 3px rgba(243, 243, 243, 0.05);
+}
+
+.hero .content .cta{
+    margin-top: 1rem;
+    display: inline-block;
+    padding: 1rem 3rem;
+    font-size: 1.4rem;
+    color: #f3f3f3;
+    background-color: var(--primary);
+    border-radius: 20px;
 }
 
 /*Responsive*/
