--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     font-family: 'Libre Baskerville', serif;
     background-color: var(--bg);
     color: black;
-    min-height: 1000px;
+    /*min-height: 750px;--!>
 }
 
 /*Navbar*/
@@ -97,9 +97,10 @@ body {
     display: block;
     position: absolute;
     width: 100%;
-    height: 100%;
-    background: linear-gradient(0deg, 
-    rgba(243, 243, 243,0.2)3%, rgba(243, 243, 243, 0.05) 20%);
+    height: 40%;
+    background: linear-gradient(8deg, 
+    rgba(243, 243, 243,0.2)3%, rgba(243, 243, 243, 0.05) 50%);
+    bottom: 0;
 }
 
 .hero .content {
@@ -115,11 +116,13 @@ body {
 }
 
 .hero .content p {
+    color: #f3f3f3;
     font-size: 1.6rem;
     margin-top: 1rem;
     line-height: 1.2;
     font-weight: 100;
     text-shadow: 1px 1px 3px rgba(243, 243, 243, 0.05);
+    mix-blend-mode: difference;
 }
 
 .hero .content .cta{
@@ -130,8 +133,19 @@ body {
     color: #f3f3f3;
     background-color: var(--primary);
     border-radius: 20px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
 }
 
+/*About Section*/
+.about{
+    padding: 4rem 7% 1.4rem;
+}
+
+.about h2 {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 3rem;
+}
 /*Responsive*/
 
 @media (max-width: 1366px) {
