--- a/style.css
+++ b/style.css
@@ -143,9 +143,40 @@ body {
 
 .about h2 {
     text-align: center;
-    font-size: 20px;
+    font-size: 35px;
     margin-bottom: 3rem;
 }
+
+.about .row {
+    display: flex;
+}
+
+.about .row .about-img {
+    flex:  1 1 30rem;
+}
+
+.about .row .about-img img{
+    width: 100%;
+    border-radius: 20px;
+}
+
+.about .row .content {
+    flex: 1 1 50rem;
+    padding: 0 1rem;
+}
+
+.about .row .content h3 {
+    font-size: 1.6rem;
+    margin-bottom: 0.8rem;
+    font-weight: 100;
+    line-height: 1.6rem;
+}
+
+.about .row .content p {
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+}
+
 /*Responsive*/
 
 @media (max-width: 1366px) {
