--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     font-family: 'Libre Baskerville', serif;
     background-color: var(--bg);
     color: black;
-    min-height: 1500px;
+    min-height: 4000px;
 }
 
 /*Navbar*/
@@ -137,12 +137,13 @@ body {
 }
 
 /*About Section*/
-.about, .menu {
+.about, .menu, .contact {
     padding: 8rem 7% 1.4rem;
 }
 
 .about h2,
-.menu h2 {
+.menu h2,
+.contact h2{ 
     text-align: center;
     font-size: 2rem;
     margin-bottom: 3rem;
@@ -150,7 +151,8 @@ body {
 }
 
 .about h2 span,
-.menu h2 span {
+.menu h2 span,
+.contact h2 span{
     color: var(--primary);
 }
 
@@ -165,6 +167,7 @@ body {
 .about .row .about-img img{
     width: 100%;
     border-radius: 20px;
+    box-shadow: 1 1 3px rgba(0, 0, 0, 0.5);
 }
 
 .about .row .content {
@@ -186,11 +189,13 @@ body {
 
 /*Menu Section*/
 
-.menu h2 {
-    margin-bottom: 0.2rem;
+.menu h2,
+.contact h2 {
+    margin-bottom: 1rem;
 }
 
-.menu p {
+.menu p,
+.contact p {
     font-size: 1.2rem;
     text-align: center;
     max-width: 30rem;
@@ -199,7 +204,40 @@ body {
     line-height: 1.4rem;
 }
 
-.menu
+.menu .row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 5rem;
+    justify-content: center;
+}
+.menu .row .menu-card {
+    text-align: center;
+}
+
+.menu .row .menu-card img{
+    border-radius: 50%;
+    width: 60%;
+}
+
+.menu .row .menu-card .menu-card-title {
+    margin: 1rem auto 0.5rem;
+}
+
+/*Contact Section*/
+
+.contact .row {
+    display: flex;
+    margin-top: 2rem;
+    background-color: rgb(16, 125, 163, 0.05);
+    flex-wrap: wrap;
+}
+
+.contact .row .maps {
+    flex: 1 1 45rem;
+    width: 100%;
+    object-fit: cover;
+}
+
 /*Responsive*/
 
 @media (max-width: 1366px) {
