--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ footer .links {
 footer .links a{
     color: #f3f3f3;
     padding: 0.7rem 1rem;
-    margin-bottom: ;
+    margin-bottom: 1rem;
 }
 
 footer .credit {
